--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="project5.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <script src="https://kit.fontawesome.com/06c0f3c3b9.js" crossorigin="anonymous"></script>
     <script src="project5.js"></script>
     <title>Restaurant Website</title>
