--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <div class="navigation_container">
             <div class="logo_container">
-                <img class="cooking_logo" src="images/cooking.png" alt="logo">
+                <img class="cooking_logo" src="cooking.png" alt="logo">
             </div>
             <div class="bar_icon"><i class="fa-solid fa-bars"></i></div>
         </div>
@@ -23,7 +23,7 @@
     <div class="navigation_container">
         <div class="hero">
             <div class="hero_image">
-                <img src="images/hero_image.png" alt="hero_image">
+                <img src="hero_image.png" alt="hero_image">
             </div>
             <div class="hero_content">
                 <div class="tag">
@@ -40,21 +40,21 @@
     <div class="navigation_container">
         <section class="features">
             <div class="feature">
-                <img src="icons/discount.png" alt="Discount Icon">
+                <img src="discount.png" alt="Discount Icon">
                 <div class="feature_content">
                     <h3>Discount Voucher</h3>
                     Enjoy exclusive discounts and offers on your favorite meals. Sign up today to get your voucher.
                 </div>
             </div>
             <div class="feature">
-                <img src="icons/fresh.png" alt="Fresh Food Icon">
+                <img src="fresh.png" alt="Fresh Food Icon">
                 <div class="feature_content">
                     <h3>Fresh & Healthy Food</h3>
                     We prioritize your health by using only the freshest ingredients in all our dishes.
                 </div>
             </div>
             <div class="feature">
-                <img src="icons/delivery.png" alt="Delivery Icon">
+                <img src="delivery.png" alt="Delivery Icon">
                 <div class="feature_content">
                     <h3>Instant Delivery</h3>
                     Get your food delivered hot and fresh to your doorstep with our speedy delivery service.
@@ -70,25 +70,25 @@
             <h2>Explore Our Menu</h2>
             <div class="grid">
                 <div class="item1">
-                    <img class="grid_image" src="images/grid_image1.png" alt="Pizza">
+                    <img class="grid_image" src="grid_image1.png" alt="Pizza">
                 </div>
                 <div class="item2">
-                    <img class="grid_image" src="images/grid_image2.png" alt="Burger">
+                    <img class="grid_image" src="grid_image2.png" alt="Burger">
                 </div>
                 <div class="item3">
-                    <img class="grid_image" src="images/grid_image3.png" alt="Pasta">
+                    <img class="grid_image" src="grid_image3.png" alt="Pasta">
                 </div>
                 <div class="item4">
-                    <img class="grid_image" src="images/grid_image4.png" alt="Salad">
+                    <img class="grid_image" src="grid_image4.png" alt="Salad">
                 </div>
                 <div class="item5">
-                    <img class="grid_image" src="images/grid_image5.png" alt="Desserts">
+                    <img class="grid_image" src="grid_image5.png" alt="Desserts">
                 </div>
                 <div class="item6">
-                    <img class="grid_image" src="images/grid_image6.png" alt="Drinks">
+                    <img class="grid_image" src="grid_image6.png" alt="Drinks">
                 </div>
                 <div class="item7">
-                    <img class="grid_image" src="images/grid_image7.png" alt="Sushi">
+                    <img class="grid_image" src="grid_image7.png" alt="Sushi">
                 </div>
             </div>
         </div>
@@ -96,7 +96,7 @@
     <footer>
         <div class="footer_container">
             <div class="footer_logo">
-                <img src="images/logo (2).png" alt="Footer Logo">
+                <img src="logo (2).png" alt="Footer Logo">
             </div>
             <div class="link_list">
                 <h3>Main Links</h3>
